<resources>
    <string name="app_name">MedicalRecords</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nuevo_paciente">Nuevo Paciente</string>
    <string name="mujer">Mujer</string>
    <string name="genero">Genero:</string>
    <string name="hombre">Hombre</string>
    <string name="documento">Documento:</string>
    <string name="nombre">Nombre:</string>
    <string name="numero_documento">Numero Documento</string>
    <string name="agregar_expediente">Agregar expediente</string>
    <string name="expedientes">Expedientes</string>
    <string name="salir">Salir</string>
    <string name="buscar">Buscar</string>
</resources>
