<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreaExpedienteActivity">

    <TextView
        android:id="@+id/textViewNombreGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="280dp"
        android:text="@string/genero"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDocumento"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:autofillHints=""
        android:contentDescription="@string/numero_documento"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNombre2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewNombre2"
        app:layout_constraintVertical_bias="0.36" />

    <TextView
        android:id="@+id/textViewNombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="192dp"
        android:labelFor="@+id/editTextDocumento"
        android:text="@string/documento"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarCreaExpediente"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginBottom="659dp"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="56dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="false"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/backspace24dp"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageViewPerson"
        android:layout_width="39dp"
        android:layout_height="34dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/personwhite24dp" />

    <TextView
        android:id="@+id/textViewNuevo"
        android:layout_width="172dp"
        android:layout_height="39dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:text="@string/nuevo_paciente"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="auto"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNombre"
        app:layout_constraintStart_toStartOf="@+id/editTextDocumento"
        app:layout_constraintTop_toTopOf="@+id/textViewNombre"
        app:layout_constraintVertical_bias="0.36"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="108dp"
        android:labelFor="@+id/editTextNombre"
        android:text="@string/nombre"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonAddPerson"
        android:layout_width="82dp"
        android:layout_height="77dp"
        android:layout_marginTop="361dp"
        android:layout_marginEnd="164dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/personadd48dp"
        android:contentDescription="TODO" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="256dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonMujer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mujer" />

        <RadioButton
            android:id="@+id/radioButtonHombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hombre" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>